<resources>
    <string name="app_name">MedLite</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="settings">Settings</string>
    <string name="cart">Cart</string>
    <string name="products">Products</string>
    <string name="product_details">Product Details</string>
    <string name="no_result_for_current_search">No Result for Current Search</string>
    <string name="for_sign_up_or">for sign up, or</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="your_account">Your Account</string>
    <string name="create">Create</string>
    <string name="terms_condition">Terms Condition</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="enter_your_email_and_new_password">Enter your Email and new Password</string>
    <string name="welcome">Welcome</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember Me</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="signin">Sign In</string>
    <string name="email">Email</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="want_to_join_our_team">Want to join our team?</string>
    <string name="click_here">Click here</string>
    <string name="full_name">Full Name</string>
    <string name="by_signing_up_you_agree_to_our">By signing up you agree to our</string>
    <string name="amp"><![CDATA[&]]></string>
    <string name="product_details_placeholder">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="make_sure_your_wifi_or_data_is_enable_turn_on_mobile_data_or_wifi">Make sure your Wifi or data is enable Turn on mobile data or Wifi</string>
    <string name="try_again">Try Again</string>
    <string name="contact">Contact</string>
    <string name="email_address">cliffrob25@gmail.com</string>
    <string name="phone_number">239-595-4095</string>
    <string name="current_address">Cape Coral, Florida 33990</string>
    <string name="address">Address</string>
    <string name="skill_set">Skill Set</string>
    <string name="description_info">I develop customized solutions for customers of all sizes, specializing in creating stylish and modern mobile apps and websites.</string>
    <string name="profile_info">Profile Info.</string>
    <string name="developer_name">Clifton Robinson</string>
    <string name="developer_title">Android Developer</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
</resources>