<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sign_up_bg"
    >

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#99000000"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:paddingBottom="150dp"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="53dp"
            android:layout_marginRight="24dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/welcome"
                android:fontFamily="@font/montserrat_bold"
                android:textColor="@color/white"
                android:textSize="36sp"
                android:textStyle="bold"/>

            <LinearLayout
                android:visibility="visible"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/create"
                    android:fontFamily="@font/montserrat_bold"
                    android:textColor="@color/colorPrimary"
                    android:textSize="30sp"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/title2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="6dp"
                    android:text="@string/your_account"
                    android:textColor="@color/white"
                    android:fontFamily="@font/montserrat_bold"
                    android:textSize="30sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="16dp"
                android:background="@drawable/bg_signup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="21dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/montserrat_medium"
                        android:text="@string/enter_your_email_and_new_password"
                        android:textColor="#6c747f"
                        android:textSize="15sp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="bottom"
                            android:fontFamily="@font/montserrat_medium"
                            android:text="@string/for_sign_up_or"
                            android:textColor="#6c747f"
                            android:textSize="15sp" />

                        <TextView
                            android:id="@+id/tvSignIn"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="bottom"
                            android:layout_marginLeft="14dp"
                            android:fontFamily="@font/montserrat_bold"
                            android:text="@string/already_have_an_account"
                            android:textColor="@color/colorPrimarySecondary"
                            android:textSize="15sp" />

                    </LinearLayout>

                </LinearLayout>

                <EditText
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="36dp"
                    android:background="@drawable/rect_gray_border"
                    android:fontFamily="@font/montserrat_medium"
                    android:hint="@string/full_name"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:paddingStart="15dp"
                    android:textColor="#4f585e"
                    android:textColorHint="#9b9b9b"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/rect_gray_border"
                    android:fontFamily="@font/montserrat_medium"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:paddingStart="15dp"
                    android:textColor="#4f585e"
                    android:textColorHint="#9b9b9b"
                    android:textSize="16sp" />


                <LinearLayout
                    android:layout_marginTop="16dp"
                    android:background="@drawable/rect_gray_border"
                    android:layout_width="match_parent"
                    android:layout_height="48dp">

                    <EditText
                        android:id="@+id/password"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:hint="@string/password"
                        android:paddingStart="15dp"
                        android:maxLines="1"
                        android:background="@color/transparent"
                        android:fontFamily="@font/montserrat_medium"
                        android:inputType="textPassword"
                        android:textColor="@color/colorAccent"
                        android:textSize="16sp" />

                    <FrameLayout
                        android:id="@+id/frame_eye"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:paddingStart="30dp"
                        android:paddingTop="7dp"
                        android:paddingEnd="30dp"
                        android:paddingBottom="9dp">

                        <ImageView
                            android:id="@+id/img_eye1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_eye_vision"
                            android:visibility="gone" />

                        <ImageView
                            android:id="@+id/img_eye2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_eye_invision" />
                    </FrameLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_marginTop="16dp"
                    android:background="@drawable/rect_gray_border"
                    android:layout_width="match_parent"
                    android:layout_height="48dp">

                    <EditText
                        android:id="@+id/et_password1"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@color/transparent"
                        android:fontFamily="@font/montserrat_medium"
                        android:hint="@string/confirm_password"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:paddingStart="15dp"
                        android:textColor="@color/colorAccent"
                        android:textSize="16sp" />

                    <FrameLayout
                        android:id="@+id/frame_eye1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:paddingStart="30dp"
                        android:paddingTop="7dp"
                        android:paddingEnd="30dp"
                        android:paddingBottom="9dp">

                        <ImageView
                            android:id="@+id/img_eye3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_eye_vision"
                            android:visibility="gone" />

                        <ImageView
                            android:id="@+id/img_eye4"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_eye_invision" />
                    </FrameLayout>
                </LinearLayout>

                <TextView
                    android:visibility="invisible"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="13dp"
                    android:fontFamily="@font/montserrat_medium"
                    android:text="@string/forgot_password"
                    android:textColor="@color/colorPrimary"
                    android:textSize="15sp" />

            </LinearLayout>

            <Button
                android:id="@+id/btn_sign_up"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="28dp"
                android:background="@drawable/rectangle_multi_gradient"
                android:fontFamily="@font/montserrat_medium"
                android:paddingTop="14dp"
                android:paddingBottom="13dp"
                android:text="@string/sign_up"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <LinearLayout
                android:gravity="center"
                android:layout_marginTop="13dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:fontFamily="@font/montserrat_medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/by_signing_up_you_agree_to_our"
                    android:textColor="@color/white"
                    android:textSize="15sp"/>

                <TextView
                    android:layout_marginLeft="15dp"
                    android:fontFamily="@font/montserrat_medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textColor="@color/white"
                    android:textSize="15sp"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_terms"
                android:gravity="center"
                android:layout_marginTop="3dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:fontFamily="@font/montserrat_medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/terms_condition"
                    android:textColor="@color/colorPrimary"
                    android:textSize="15sp"/>

                <TextView
                    android:fontFamily="@font/montserrat_medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/amp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginEnd="10dp"
                    android:textColor="@color/white"
                    android:textSize="15sp"/>

                <TextView
                    android:fontFamily="@font/montserrat_medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/privacy_policy"
                    android:textColor="@color/white"
                    android:textSize="15sp"/>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>